upload page with large green center

--- a/upload-page/index.html
+++ b/upload-page/index.html
@@ -24,51 +24,51 @@
   </head>
 
   <body>
-	<div class="row-fluid">
-	  <div class="span12 top-bar">
-		<img src="img/flyleaf_logo.png">
-	  </div>
+  <div class="row-fluid">
+	<div class="span12 top-bar">
+	  <div class = "container"><img src="img/flyleaf_logo.png"></div>
 	</div>
+  </div>
 	
-    <div class="container">
-	  <div class="flyleaf-pov">
-		<div class="row">
-		  <div class="span12">
-		    <div class = "header1">Start sharing your content in three easy steps!</div>
-	      <div class="row-fluid">
-	        <div class="span1"></div>
-	        <div class="span10">
-	      	  <div class="row-fluid">
-	        	<div class="span4 instruction-box">
-	          		<h2>Step 1</h2>
-	          		<p>Click on the upload content button below.</p>
-	        	</div>
-	        	<div class="span4 instruction-box">
-	          		<h2>Step 2</h2>
-	          		<p>Select the content you want to share. </p>
-	       		</div>
-	        	<div class="span4 instruction-box">
-	          		<h2>Step 3</h2>
-	          		<p>We will give you a URL link to your content that you can share with your friends.</p>
-	        	</div>
-			  </div>
-			</div>
-	        <div class="span1"></div>
+  <div class = "row-fluid"> 
+	<div class="span12 upload-region">
+
+	  <div class = "container">		
+		<div class = "header1">Start sharing your content in three easy steps!</div>
+		<div class="row-fluid">
+	      <div class="span4 instruction-box">
+	        <h2>Step 1</h2>
+	        <p>Click on the upload content button below.</p>
 	      </div>
-		    <div class="row">
-		      <div class="span12 top-large-space bottom-large-space"><a class="btn btn-upload btn-large">Upload content</a></div>
-		    </div>
+	      <div class="span4 instruction-box">
+	        <h2>Step 2</h2>
+	        <p>Select the content you want to share. </p>
+	      </div>
+	      <div class="span4 instruction-box">
+	        <h2>Step 3</h2>
+	        <p>We will give you a URL link to your content that you can share with your friends.</p>
 		  </div>
 		</div>
-      </div>
+		<div class = "row-fluid">
+		  <div class = "span1"></div>
+	 	  <div class = "span10 flyleaf-pov">
+			<a class="btn btn-upload btn-large top-large-space bottom-large-space">Upload content</a>
+		  </div>
+		  <div class = "span1"></div>
+		</div>
+	  </div>
 
-      <hr>
+	  </div>
+	</div>
+
+    <hr>
+	<div class ="container">
 
       <footer>
         <p>&copy; flyleaf.me 2013</p>
       </footer>
+	</div>
 
-    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
